# mediforce

./: .dockerignore  .env.example  .git-blame-ignore-revs  .gitattributes  .gitignore  .npmrc  .worktreeinclude  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Caddyfile  GETTING-STARTED.md  HANDOFF-ADR-0002-PR2.md  LICENSE  PLAN.md  README.md  apphosting.pharmaverse.yaml  apphosting.supply-intelligence.yaml  apphosting.yaml  biome.json  collectingsubmissiondocuments.wd.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  firebase.json  firestore.e2e.rules  firestore.indexes.json  firestore.rules  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  protocol-to-synthetic-sdtm-spec.md  renovate.json  storage.rules  stunnel.conf  tsconfig.json  vercel.json  vitest.config.ts
mcp/cdisclib/: .gitignore  README.md  cdisc-library.mock.postman_environment.json  cdisc-library.postman_collection.json  pyproject.toml
mcp/cdisclib/src/cdisclib_mcp/: __init__.py  cache.py  client.py  server.py
mcp/cdisclib/tests/: conftest.py  test_client.py  test_live_smoke.py  test_tools.py
mcp/cdisclib/tests/fixtures/: bc_C105585.json  bc_list.json  ct_packages.json  datasetspec_SYSBP.json  datasetspec_list.json  search_glucose.json
mcp/cdisclib/tools/: build_postman_collection.py
mcp/ctgov/: README.md  pyproject.toml
mcp/ctgov/src/ctgov_mcp/: __init__.py  cache.py  client.py  server.py
mcp/ctgov/tests/: conftest.py  test_client.py  test_live_smoke.py  test_tools.py
mcp/ctgov/tests/fixtures/: enums.json  search_diabetes.json  (+2 more)
(+837 files in other folders)
