[project]
name = "cdisclib-mcp"
version = "0.1.0"
description = "MCP server exposing the CDISC Library API (Biomedical Concepts, SDTM Dataset Specializations, Controlled Terminology, search)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
cdisclib-mcp = "cdisclib_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cdisclib_mcp"]

[tool.pytest.ini_options]
markers = [
    "live: tests that hit the live CDISC Library API (deselect with '-m \"not live\"')",
]
testpaths = ["tests"]
