[project]
name = "ctgov-mcp"
version = "0.1.0"
description = "MCP server exposing the ClinicalTrials.gov API v2 (study fetch, search, metadata, enums)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
ctgov-mcp = "ctgov_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ctgov_mcp"]

[tool.pytest.ini_options]
markers = [
    "live: tests that hit the live ClinicalTrials.gov API (deselect with '-m \"not live\"')",
]
testpaths = ["tests"]
